tests/snapshots/e2e__feature_tests__latest_lts__Fish.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
fnm env | source
fnm install 'lts/*'
fnm ls | grep lts-latest
fnm use 'lts/*'
