tests/snapshots/e2e__feature_tests__latest_lts__Zsh.snap
---
source: tests/e2e.rs
expression: "&source.trim()"
---
set -e
eval "$(fnm env)"
fnm install 'lts/*'
fnm ls | grep lts-latest
fnm use 'lts/*'
